# realtime-tts-usage

./: README.md  pyproject.toml
samples/: complex_test.py  coqui_test.py  gtts_test.py  kokoro_test.py  parler_test.py
