[project]
name = "realtime-tts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9,<3.13"
dependencies = [
    "cutlet>=0.5.0",
    "fugashi[unidic-lite]>=1.4.0",
    "ipadic>=1.0.0",
    "jaconv>=0.4.0",
    "mecab-python3>=1.0.10",
    "mojimoji>=0.0.13",
    "realtimetts[all]>=0.4.44",
    "torch==2.5.1+cu124",
    "torchaudio==2.5.1+cu124",
]

[dependency-groups]
dev = [
    "ruff>=0.9.2",
]

[tool.uv.sources]
torch = { index = "torch-cuda" }
torchaudio= { index = "torch-cuda" }

[[tool.uv.index]]
name = "torch-cuda"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.ruff]
line-length = 88
target-version = "py312"
select = ["E", "F", "W", "I", "S", "C", "B", "A"]
exclude = [
    ".bzr", ".direnv", ".eggs", ".git", ".git-rewrite", ".hg", ".ipynb_checkpoints",
    ".mypy_cache", ".nox", ".pants.d", ".pyenv", ".pytest_cache", ".pytype", ".ruff_cache",
    ".svn", ".tox", ".venv", ".vscode", "__pypackages__", "_build", "buck-out", "build",
    "dist", "node_modules", "site-packages", "venv"
]

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D", "ANN"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.per-file-ignores]
"test_*.py" = ["S101"]
